--- a/.travis.yml
+++ b/.travis.yml
@@ -20,14 +20,16 @@ env:
     # Supply more than one RACKET_VERSION (as in the example below) to
     # create a Travis-CI build matrix to test against multiple Racket
     # versions.
-    - RACKET_VERSION=6.0
-    - RACKET_VERSION=6.1
-    - RACKET_VERSION=6.1.1
-    - RACKET_VERSION=6.2
-    - RACKET_VERSION=6.3
-    - RACKET_VERSION=6.4
-    - RACKET_VERSION=6.5
-    - RACKET_VERSION=6.6
+    #
+    # Note: 6.7 or newer is needed due to index-of
+    # - RACKET_VERSION=6.0
+    # - RACKET_VERSION=6.1
+    # - RACKET_VERSION=6.1.1
+    # - RACKET_VERSION=6.2
+    # - RACKET_VERSION=6.3
+    # - RACKET_VERSION=6.4
+    # - RACKET_VERSION=6.5
+    # - RACKET_VERSION=6.6
     - RACKET_VERSION=6.7
     - RACKET_VERSION=6.8
     - RACKET_VERSION=HEAD
